added InstalledContracts - code changes
